@@ -1,4 +1,4 @@
-function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, dilrad)
+function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, SAFE, dilrad)
 % SCIMAT_LCONVHULL_SMOOTHING  Smoothing of a binary image using a local
 % convex hull.
 %
@@ -12,12 +12,11 @@ function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, dilrad)
 %   their coordinates produces a mesh triangulation with the local convex
 %   hull.
 %
-%   The inside of the triangulation is converted to voxels using
-%   itk_tri_rasterization(). As this function can misclassify quite a few
-%   voxels that should be labelled as 1, we run it three times permuting
-%   the coordinates of the mesh and the resulting image, and combining the
-%   results with an OR. Finally, we run a hole filling algorithm in case
-%   any voxels within the mesh were missed.
+%   Then, rays are traced from the centre of each voxel within the bounding
+%   box of the mesh. The number of intersections with the mesh allows to
+%   know whether the voxel is inside or outside of it. This part uses
+%   cgal_insurftri(), which is very precise but can be a bit slow for very
+%   large images.
 %
 %   RAD is a scalar with the radius of the alpha shape, i.e. the size of
 %   the convex hull neighbourhood. When the convex hull is computed, only
@@ -28,7 +27,18 @@ function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, dilrad)
 %
 %   SCIMAT2 is the local convex hull of SCIMAT.
 %
-% SCIMAT2 = scimat_lconvhull_smoothing(SCIMAT, RAD, DILRAD)
+% SCIMAT2 = scimat_lconvhull_smoothing(SCIMAT, RAD, false, DILRAD)
+%
+%   To allow for faster processing when the above method using
+%   cgal_insurftri() is too slow, we allow an "unsafe" mode. This method
+%   uses itk_tri_rasterization(), which is faster but less reliable.
+%
+%   The inside of the triangulation is converted to voxels using
+%   itk_tri_rasterization(). As this function can misclassify quite a few
+%   voxels that should be labelled as 1, we run it three times permuting
+%   the coordinates of the mesh and the resulting image, and combining the
+%   results with an OR. Finally, we run a hole filling algorithm in case
+%   any voxels within the mesh were missed.
 %
 %   DILRAD is the radius of the dilation algorithm that is used internally
 %   to fix artifacts by itk_tri_rasterization(). Larger values of DILRAD
@@ -40,12 +50,12 @@ function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, dilrad)
 % alpha shape functions in the CGAL library because the latter need to use
 % a rather slow Delaunay triangulation first.
 %
-% See also: itk_tri_rasterization, cgal_insurftri, cgal_alpha_shape3,
-% cgal_fixed_alpha_shape3, scimat_closed_surf_to_bw.
+% See also: cgal_insurftri, alphavol, itk_tri_rasterization,
+% cgal_alpha_shape3, cgal_fixed_alpha_shape3, scimat_closed_surf_to_bw.
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2012-2013 University of Oxford
-% Version: 0.5.0
+% Version: 0.6.0
 % $Rev$
 % $Date$
 % 
@@ -73,7 +83,7 @@ function [scimat, tri, x] = scimat_lconvhull_smoothing(scimat, rad, dilrad)
 % along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 % check arguments
-narginchk(2, 3);
+narginchk(2, 4);
 nargoutchk(0, 3);
 
 % if the image has all voxels == 1, then the smoothed local convex hull is
@@ -91,7 +101,10 @@ if (nnz(scimat.data) < 4)
 end
 
 % defaults
-if (nargin < 3 || isempty(dilrad))
+if (nargin < 3 || isempty(SAFE))
+    SAFE = true;
+end
+if (nargin < 4 || isempty(dilrad))
     dilrad = 10;
 end
 
@@ -156,50 +169,111 @@ end
 % ylabel('y (mm)')
 % zlabel('z (mm)')
 
-% rasterize mesh to binary segmentation. This is fast, but quite often
-% voxels that should be labelled as 1 get labelled as 0
-res = [scimat.axis.spacing]; % (r, c, s) format
-sz = size(scimat.data); % (r, c, s) format
-origin = scinrrd_index2world([1, 1, 1], scimat.axis);
-scimat.data = itk_tri_rasterization(tri, x, res, sz, origin);
+if (SAFE)
+    
+    % the safe way to rasterize the mesh interior is by using the CGAL
+    % function. This is quite slow, though
 
-% that's why we re-compute the rasterization by permuting x and y
-% dimensions, and add the voxels found here to the voxels found before
-aux = itk_tri_rasterization(...
-    tri, ...
-    x(:, [2 1 3]), ...
-    res([2 1 3]), ...
-    sz([2 1 3]), ...
-    origin([2 1 3]));
-aux = permute(aux, [2 1 3]);
-scimat.data = scimat.data | aux;
+    % init output
+    scimat.data(:) = 0;
+    
+    % bounding box obtained from the mesh, rounded up outwards to the
+    % closest voxel centres
+    xmin = min(x);
+    xmax = max(x);
+    idxmin = floor(scinrrd_world2index(xmin, scimat.axis));
+    idxmax = ceil(scinrrd_world2index(xmax, scimat.axis));
+    xmin = scinrrd_index2world(idxmin, scimat.axis);
+    xmax = scinrrd_index2world(idxmax, scimat.axis);
+    
+    % vectors of voxel centres to check whether they are inside or outside
+    % the mesh
+    cx = linspace(xmin(1), xmax(1), idxmax(2) - idxmin(2) + 1);
+    cy = linspace(xmin(2), xmax(2), idxmax(1) - idxmin(1) + 1);
+    cz = linspace(xmin(3), xmax(3), idxmax(3) - idxmin(3) + 1);
+    
+    % check whether voxels are inside or outside
+    tic
+    scimat.data(idxmin(1):idxmax(1), ...
+        idxmin(2):idxmax(2), ...
+        idxmin(3):idxmax(3)) ...
+        = cgal_insurftri(tri, x, {cx, cy, cz});
+    toc
+    
+else
+    
+    % rasterize mesh to binary segmentation. This is fast, but quite often
+    % voxels that should be labelled as 1 get labelled as 0
+    res = [scimat.axis.spacing]; % (r, c, s) format
+    sz = size(scimat.data); % (r, c, s) format
+    origin = scinrrd_index2world([1, 1, 1], scimat.axis);
+    scimat.data = itk_tri_rasterization(tri, x, res, sz, origin);
+    
+    % that's why we re-compute the rasterization by permuting x and y
+    % dimensions, and add the voxels found here to the voxels found before
+    aux = itk_tri_rasterization(...
+        tri, ...
+        x(:, [2 1 3]), ...
+        res([2 1 3]), ...
+        sz([2 1 3]), ...
+        origin([2 1 3]));
+    aux = permute(aux, [2 1 3]);
+    scimat.data = scimat.data | aux;
+    
+    % and again, permuting x <-> z
+    aux = itk_tri_rasterization(...
+        tri, ...
+        x(:, [2 3 1]), ...
+        res([3 1 2]), ...
+        sz([3 1 2]), ...
+        origin([2 3 1]));
+    aux = permute(aux, [2 3 1]);
+    scimat.data = uint8(scimat.data | aux);
+    
+    %% correct segmentation
+    
+    if (dilrad == 0)
+        return
+    end
+    
+    % the approach above is fast, but it often fails to set to 1 voxels within
+    % the mesh. What we do is dilate the segmentation, fill holes, and then
+    % re-check all the resulting extra voxels
+    
+    % dilate segmentation
+    aux = itk_imfilter('bwdilate', scimat.data, dilrad, 1);
+    [r, c, s] = ind2sub(size(aux), find(aux));
+    if (any(r == 1) || any(r == size(aux, 1)) ...
+            || any(c == 1) || any(c == size(aux, 2)) ...
+            || any(s == 1) || any(s == size(aux, 3)) ...
+            )
+        warning('Gerardus:ImageOverflow', 'Dilation radius too large for image boundaries')
+    end
+    
+    % bounding box obtained from the mesh
+    xmin = min(x);
+    xmax = max(x);
+    idxmin = floor(scinrrd_world2index(xmin, scimat.axis));
+    idxmax = ceil(scinrrd_world2index(xmax, scimat.axis));
+    
+    % remove voxels outside the bounding box, as we know for sure they are
+    % part of the background
+    aux(1:idxmin(1), :, :) = 0;
+    aux(idxmax(1):end, :, :) = 0;
+    aux(:, 1:idxmin(2), :) = 0;
+    aux(:, idxmax(2):end, :) = 0;
+    aux(:, :, 1:idxmin(3)) = 0;
+    aux(:, :, idxmax(3):end) = 0;
+    
+    % fill holes in the segmentation
+    aux = imfill(aux, 'holes');
+    
+    % get list of voxels that the dilation has added and their coordinates
+    idx = find(xor(aux, scimat.data));
+    [r, c, s] = ind2sub(size(aux), idx);
+    xi = scinrrd_index2world([r, c, s], scimat.axis);
+    
+    % check those extra voxels with
+    scimat.data(idx) = cgal_insurftri(tri, x, xi, rand(3));
 
-% and again, permuting x <-> z
-aux = itk_tri_rasterization(...
-    tri, ...
-    x(:, [2 3 1]), ...
-    res([3 1 2]), ...
-    sz([3 1 2]), ...
-    origin([2 3 1]));
-aux = permute(aux, [2 3 1]);
-scimat.data = uint8(scimat.data | aux);
-
-%% correct segmentation
-
-% the approach above is fast, but it fails to set to 1 voxels within the
-% mesh. What we do is dilate the segmentation, fill holes, and then
-% re-check all the resulting extra voxels
-
-% dilate segmentation
-aux = itk_imfilter('bwdilate', scimat.data, dilrad, 1);
-
-% fill holes in the segmentation
-aux = imfill(aux, 'holes');
-
-% get list of voxels that the dilation has added and their coordinates
-idx = find(xor(aux, scimat.data));
-[r, c, s] = ind2sub(size(aux), idx);
-xi = scinrrd_index2world([r, c, s], scimat.axis);
-
-% check those extra voxels with 
-scimat.data(idx) = cgal_insurftri(tri, x, xi, rand(3));
+end
